# ai-gateway-demo

./: .gitignore  README.md  clean-up-resources.ipynb  load-balancing.ipynb  pyproject.toml  semantic-caching.ipynb  setup.ipynb  token-metrics-emitting.ipynb  token-rate-limiting.ipynb
.devcontainer/: devcontainer.json  init.sh  postCreate.sh
.github/: copilot-instructions.md
shared/: utils.py
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  variables.tf
terraform/modules/foundry/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
terraform/modules/inference_api/: README.md  main.tf  outputs.tf  variables.tf
terraform/modules/inference_api/specs/: azureopenai.json
terraform/modules/load_balancing/: load_balancing.xml  main.tf  outputs.tf  region_frc.tf  region_swc.tf  region_uks.tf
terraform/modules/semantic_caching/: main.tf  outputs.tf  semantic_caching.xml  variables.tf
terraform/modules/token_metrics_emitting/: main.tf  outputs.tf  token_metrics_emitting.xml  variables.tf
terraform/modules/token_rate_limiting/: main.tf  outputs.tf  policy.xml  token_rate_limiting.xml
