[project]
name = "poc-genai-gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-cli>=2.79.0",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "openai>=2.7.2",
    "pandas>=2.3.3",
    "redis>=7.0.1",
]
